update with logistic regression

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -482,13 +482,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Convert pandas table to array\n",
+    "feature_names = list(df_new.columns.values)\n",
     "if process_train:\n",
     "    train_data = df_new.values\n",
     "else:\n",
@@ -549,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
@@ -557,25 +558,25 @@
    "source": [
     "# Fit training data to survived labels and create decision trees\n",
     "X = train_data[0::, 1::]\n",
-    "Y = train_data[0::, 0]\n",
-    "forest = forest.fit(X, Y)"
+    "y = train_data[0::, 0]\n",
+    "forest = forest.fit(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Run decision trees on test data\n",
-    "output = forest.predict(test_data)"
+    "output = forest.predict(test_data).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
@@ -591,6 +592,122 @@
    "source": [
     "# Write predictons to file\n",
     "predictions_file = open(\"myfirstforest.csv\", \"wb\")\n",
+    "open_file_object = csv.writer(predictions_file)\n",
+    "open_file_object.writerow([\"PassengerId\",\"Survived\"])\n",
+    "open_file_object.writerows(zip(ids, output))\n",
+    "predictions_file.close()\n",
+    "print 'Done.'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Logistic Regression</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just trying out a different model for fun."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn import linear_model\n",
+    "from sklearn import cross_validation\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 0.79754967307814384)\n",
+      "(1.0, 0.79643242556973282)\n",
+      "(0.01, 0.66930743350472921)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This code is modified version of what I did in DIMACS\n",
+    "penalty_type = 'l1'\n",
+    "plot = False\n",
+    "regs = [10, 1.0, 0.01]\n",
+    "for reg in regs:\n",
+    "    logreg = linear_model.LogisticRegression(penalty = penalty_type, C=reg)\n",
+    "    logreg = logreg.fit(X, y)\n",
+    "    scores = cross_validation.cross_val_score(logreg, X, y, cv=5)\n",
+    "    mean_cv = sum(scores)/float(len(scores))\n",
+    "    print (reg, mean_cv)\n",
+    "    \n",
+    "    coef = abs(logreg.coef_)\n",
+    "    coef = [item for sublist in coef for item in sublist]\n",
+    "    coef_np = np.asarray(coef)\n",
+    "    top_coef = np.argsort(-coef_np)[:3]\n",
+    "    \n",
+    "    if plot:\n",
+    "        #Plot\n",
+    "        ind = np.arange(X.shape[1])  \n",
+    "        width = 0.35       \n",
+    "        fig, ax = plt.subplots()\n",
+    "        rects = ax.bar(ind, coef, width, color='gray')\n",
+    "        for index in top_coef:\n",
+    "            rects[index].set_color('b')\n",
+    "        plt.xticks(range(X.shape[1]))\n",
+    "        ax.set_xticklabels(feature_names,rotation=45)\n",
+    "        plt.suptitle(\"Feature Coefficients (%s, C=%s)\" %(penalty_type,reg))\n",
+    "        ax.annotate('CV Score = %0.4f'%mean_cv, xy=(0,1), xycoords='axes fraction', fontsize=12,\n",
+    "                        xytext=(5, -5), textcoords='offset points',\n",
+    "                        ha='left', va='top')\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "logreg.predict(test_data).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write predictons to file\n",
+    "predictions_file = open(\"logreg.csv\", \"wb\")\n",
     "open_file_object = csv.writer(predictions_file)\n",
     "open_file_object.writerow([\"PassengerId\",\"Survived\"])\n",
     "open_file_object.writerows(zip(ids, output))\n",
