added next steps

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -716,13 +716,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Moving forward, things we can try out:  \n",
+    "\"We know we'd like to have better predictive power for the men, so you might be wishing you could pull out more information from the Name column -- for example the honorary or pedestrian title of the men? We won't accomplish that in this tutorial, but you may find ideas in the Kaggle forums.\""
+   ]
   }
  ],
  "metadata": {
